cabal-version:       3.0
name:                pdf-cos
version:             0.1.0.0
synopsis:            This is a library for working with the basic syntax
                     of PDF docuements.
-- description:
-- bug-reports:
license:             ISC
license-file:        LICENSE
author:              Iavor Diatchki
maintainer:          iavor.diatchki@gmail.com
copyright:           2019, Galois Inc
-- category:
build-type:          Custom
extra-source-files:
  CHANGELOG.md,
  spec/CMap.ddl,
  spec/ContentStreamLight.ddl,
  spec/GenPdfValue.ddl,
  spec/ISOCodes.ddl,
  spec/JpegBasics.ddl,
  spec/Map.ddl,
  spec/Pair.ddl,
  spec/PdfCrypto.ddl,
  spec/PdfDecl.ddl,
  spec/PdfExtractText.ddl,
  spec/PdfText.ddl,
  spec/PdfValue.ddl,
  spec/PdfXRef.ddl,
  spec/Stdlib.ddl,
  spec/Sum.ddl

custom-setup
  setup-depends: base, containers, daedalus, text, filepath, Cabal

-- Support code for running PDF.  This is parameterized on which
-- of the above modules to use.
library
  default-language:     Haskell2010
  hs-source-dirs:       src
  ghc-options:          -Wall

  exposed-modules:
    PdfMonad,
    XRef,
    Primitives.Resolve,
    Primitives.Validate,
    Primitives.Deflate,
    Primitives.LZW,
    Primitives.ASCIIHex,
    Primitives.ASCII85,
    Primitives.Decrypt, 
    PdfMonad.Transformer,
    PdfMonad.Release,
    PdfParserNotSpecialized,
    PdfParser,
    
    -- copying the 'autogen-modules':
    Array,
    -- CMap, GenPdfValue,
      -- ghc does not compile daedalus generated code for this pair of dependencies!
    ContentStreamLight,
    ISOCodes,
    JpegBasics,
    Map,
    Pair,
    PdfCrypto,
    PdfDecl,
    PdfExtractText,
    PdfText,
    PdfValue,
    PdfXRef,
    Stdlib,
    Sum,
    Unicode

  autogen-modules:
    -- CMap, GenPdfValue,
      -- ghc does not compile daedalus generated code for this pair of dependencies!
    Array,
    ContentStreamLight,
    ISOCodes,
    JpegBasics,
    Map,
    Pair,
    PdfCrypto,
    PdfDecl,
    PdfExtractText,
    PdfText,
    PdfValue,
    PdfXRef,
    Stdlib,
    Sum,
    Unicode

  build-depends:
    base,
    bytestring,
    containers,
    zlib,
    rts-hs, 
    cryptonite,
    cereal, 
    memory 


