cabal-version:       3.0
name:                pdf-cos
version:             0.1.0.0
synopsis:            This is a library for working with the basic syntax
                     of PDF docuements.
-- description:
-- bug-reports:
license:             ISC
license-file:        LICENSE
author:              Iavor Diatchki
maintainer:          iavor.diatchki@gmail.com
copyright:           2021, Galois Inc
-- category:
build-type:          Custom
extra-source-files:
  CHANGELOG.md,
  spec/Array.ddl,
  spec/CMap.ddl,
  spec/ContentStreamLight.ddl,
  spec/FontDict.ddl,
  spec/GenPdfValue.ddl,
  spec/ISOCodes.ddl,
  spec/JpegBasics.ddl,
  spec/Map.ddl,
  spec/Page.ddl,
  spec/PageTreeNode.ddl,
  spec/Pair.ddl,
  spec/PdfCos.ddl,
     -- ^ ddl convenience, no autogen'd file
  spec/PdfCrypto.ddl,
  spec/PdfDecl.ddl,
  spec/PdfExtractText.ddl,
  spec/PdfText.ddl,
  spec/PdfValue.ddl,
  spec/PdfXRef.ddl,
  spec/ResourceDict.ddl,
  spec/Stdlib.ddl,
  spec/Sum.ddl,
  spec/TextEffect.ddl,
  spec/TextObj.ddl,
  spec/TextPosOp.ddl,
  spec/TextShowOp.ddl,
  spec/TextStateOp.ddl,
  spec/Type0Font.ddl,
  spec/Type1Font.ddl,
  spec/Unicode.ddl

custom-setup
  setup-depends: base, containers, daedalus, directory, text, unix, filepath, Cabal

-- Support code for running PDF.  This is parameterized on which
-- of the above modules to use.
library
  default-language:     Haskell2010
  hs-source-dirs:       src
  ghc-options:          -Wall

  exposed-modules:
    PdfMonad,
    XRef,
    Primitives.Resolve,
    Primitives.Validate,
    Primitives.Deflate,
    Primitives.LZW,
    Primitives.ASCIIHex,
    Primitives.ASCII85,
    Primitives.Decrypt, 
    PdfMonad.Transformer,
    PdfMonad.Release,
    PdfParserNotSpecialized,
    PdfParser,
    
    -- copying the 'autogen-modules':
    Array,
    CMap,
    ContentStreamLight,
    FontDict,
    GenPdfValue,
    ISOCodes,
    JpegBasics,
    Map,
    Page,
    PageTreeNode,
    Pair,
    PdfCrypto,
    PdfDecl,
    PdfExtractText,
    PdfText,
    PdfValue,
    PdfXRef,
    ResourceDict,
    Stdlib,
    Sum,
    TextEffect,
    TextObj,
    TextPosOp,
    TextShowOp,
    TextStateOp,
    Type0Font,
    Type1Font,
    Unicode

  autogen-modules:
    Array,
    CMap,
    ContentStreamLight,
    FontDict,
    GenPdfValue,
    ISOCodes,
    JpegBasics,
    Map,
    Page,
    PageTreeNode,
    Pair,
    PdfCrypto,
    PdfDecl,
    PdfExtractText,
    PdfText,
    PdfValue,
    PdfXRef,
    ResourceDict,
    Stdlib,
    Sum,
    TextEffect,
    TextObj,
    TextPosOp,
    TextShowOp,
    TextStateOp,
    Type0Font,
    Type1Font,
    Unicode

  build-depends:
    base,
    bytestring,
    containers,
    zlib,
    rts-hs, 
    cryptonite,
    cereal, 
    memory 


