cabal-version:       3.0
name:                pdf-cos
version:             0.1.0.0
synopsis:            This is a library for working with the basic syntax
                     of PDF docuements.
-- description:
-- bug-reports:
license:             ISC
license-file:        LICENSE
author:              Iavor Diatchki
maintainer:          iavor.diatchki@gmail.com
copyright:           2021, Galois Inc
-- category:
build-type:          Custom
extra-source-files:
  CHANGELOG.md,
  spec/Array.ddl,
  spec/CIDFont.ddl,
  spec/CMap.ddl,
  spec/ColourSpaceOps.ddl,
  spec/ContentStreamLight.ddl,
  spec/Encoding.ddl,
  spec/FontCommon.ddl,
  spec/FontDesc.ddl,
  spec/FontDict.ddl,
  spec/GenPdfValue.ddl,
  spec/Glyph.ddl,
  spec/GlyphEnc.ddl,
  spec/GlyphList.ddl,
  spec/GlyphListNewFonts.ddl,
  spec/GraphicsStateOps.ddl,
--  spec/ISOCodes.ddl,
  spec/JpegBasics.ddl,
  spec/MacEncoding.ddl,
  spec/MacExpert.ddl,
  spec/Map.ddl,
  spec/MarkedContentOps.ddl,
  spec/Maybe.ddl,
  spec/Page.ddl,
  spec/PageTreeNode.ddl,
  spec/Pair.ddl,
  spec/PdfCos.ddl,
     -- ^ ddl convenience, no autogen'd file
  spec/PdfCrypto.ddl,
  spec/PdfDecl.ddl,
  -- spec/PdfDeclStub.ddl,  part of repo, but you shouldn't be building it, don't add.
  spec/PdfExtractText.ddl,
--  spec/PdfText.ddl,
  spec/PdfValue.ddl,
  spec/PdfXRef.ddl,
  spec/Rectangle.ddl,
  spec/ResourceDict.ddl,
  spec/StdEncoding.ddl,
  spec/Stdlib.ddl,
  spec/Sum.ddl,
  spec/TextEffect.ddl,
  spec/TextObj.ddl,
  spec/TextPosOp.ddl,
  spec/TextShowOp.ddl,
  spec/TextStateOp.ddl,
  spec/Type0Font.ddl,
  spec/Type1Font.ddl,
  spec/Type3Font.ddl,
  spec/Unicode.ddl,
  spec/WinEncoding.ddl

custom-setup
  setup-depends: base, containers, daedalus, directory, text, unix, filepath, Cabal

-- Support code for running PDF.  This is parameterized on which
-- of the above modules to use.
library
  default-language:     Haskell2010
  hs-source-dirs:       src, src/spec
  ghc-options:          -Wall

  exposed-modules:
    PdfMonad,
    XRef,
    Primitives.Resolve,
    Primitives.Validate,
    Primitives.Deflate,
    Primitives.LZW,
    Primitives.ASCIIHex,
    Primitives.ASCII85,
    Primitives.Decrypt, 
    PdfMonad.Transformer,
    PdfMonad.Release,
    PdfParserNotSpecialized,
    PdfParser,
    
    -- copying the 'autogen-modules':
    Array,
    CIDFont,
    CMap,
    ColourSpaceOps,
    ContentStreamLight,
    Encoding,
    FontCommon,
    FontDesc,
    FontDict,
    GenPdfValue,
    Glyph,
    GlyphEnc,
    GlyphList,
    GlyphListNewFonts,
    GraphicsStateOps,
--    ISOCodes,
    JpegBasics,
    MacEncoding,
    MacExpert,
    Map,
    MarkedContentOps,
    Maybe,
    Page,
    PageTreeNode,
    Pair,
    PdfCrypto,
    PdfDecl,
    PdfExtractText,
--    PdfText,
    PdfValue,
    PdfXRef,
    Rectangle,
    ResourceDict,
    StdEncoding,
    Stdlib,
    Sum,
    SymbolEncoding,
    TextEffect,
    TextObj,
    TextPosOp,
    TextShowOp,
    TextStateOp,
    TrueTypeFont,
    Type0Font,
    Type1Font,
    Type3Font,
    Unicode,
    WinEncoding,
    ZapfDingbatsEncoding

  autogen-modules:
    Array,
    CIDFont,
    CMap,
    ColourSpaceOps,
    ContentStreamLight,
    Encoding,
    FontCommon,
    FontDesc,
    FontDict,
    GenPdfValue,
    Glyph,
    GlyphEnc,
    GlyphList,
    GlyphListNewFonts,
    GraphicsStateOps,
--    ISOCodes,
    JpegBasics,
    MacEncoding,
    MacExpert,
    Map,
    MarkedContentOps,
    Maybe,
    Page,
    PageTreeNode,
    Pair,
    PdfCrypto,
    PdfDecl,
    PdfExtractText,
--    PdfText,
    PdfValue,
    PdfXRef,
    Rectangle,
    ResourceDict,
    StdEncoding,
    Stdlib,
    Sum,
    SymbolEncoding,
    TextEffect,
    TextObj,
    TextPosOp,
    TextShowOp,
    TextStateOp,
    TrueTypeFont,
    Type0Font,
    Type1Font,
    Type3Font,
    Unicode,
    WinEncoding,
    ZapfDingbatsEncoding

  build-depends:
    base,
    bytestring,
    containers,
    zlib,
    rts-hs, 
    cryptonite,
    cereal, 
    memory 


