cabal-version:       3.0
name:                pdf-driver
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
license:             ISC
license-file:        LICENSE
author:              Iavor Diatchki
maintainer:          iavor.diatchki@gmail.com
copyright:           2019, Galois Inc
-- category:
build-type:          Simple
extra-source-files:
  CHANGELOG.md,
  spec/PdfDecl.ddl,
  spec/PdfValue.ddl,
  spec/PdfXRef.ddl,
  spec/PdfDemo.ddl,
  spec/ISOCodes.ddl,
  spec/PdfText.ddl,
  spec/PdfValidate.ddl,
  spec/PdfDOM.ddl

-- Support code for running PDF.  This is parameterized on which
-- of the above modules to use.
library pdf-rts
  default-language:     Haskell2010
  hs-source-dirs:       src/rts
  ghc-options:          -Wall

  exposed-modules:
    PdfMonad,
    Primitives.Resolve,
    Primitives.Validate,
    Primitives.Deflate,
    Primitives.LZW,
    Primitives.ASCIIHex,
    Primitives.ASCII85
  other-modules:
    PdfMonad.Transformer,
    PdfMonad.Release

  build-depends:
    base,
    bytestring,
    containers,
    zlib,
    rts-hs


-- Compiled versions of the DDL specs.
library pdf-spec
  default-language:     Haskell2010
  hs-source-dirs:       src/spec
  ghc-options:          -Wall

  exposed-modules:
    PdfParser,
    PdfParserNotSpecialized,
    PdfValue,
    PdfDecl,
    PdfXRef,
    PdfDemo,
    XRef

  build-depends:
    base >=4.13 && <4.14,
    containers,
    bytestring,
    pdf-rts,
    rts-hs

library pdf-dom-spec
  default-language:     Haskell2010
  hs-source-dirs:       src/dom-spec
  ghc-options:          -Wall

  exposed-modules:
    -- PdfText,
    -- ISOCodes,
    PdfValidate,
    PdfDOM

  build-depends:
    base >=4.13 && <4.14,
    pdf-rts,
    pdf-spec,
    rts-hs



executable pdf-hs-driver
  default-language:    Haskell2010
  hs-source-dirs:      src/driver
  ghc-options:         -Wall

  main-is: Main.hs
  other-modules:
    CommandLine,
    Common

  build-depends:
    base,
    text >= 1.2.4,
    split,
    optparse-applicative,
    filepath,
    bytestring,
    containers,
    pretty,
    pretty-show,
    mtl,
    rts-hs,
    pdf-rts,
    pdf-spec

executable pdf-dom-test
  default-language: Haskell2010
  hs-source-dirs:   src/dom
  main-is:          Main.hs
  build-depends:
    base,
    bytestring,
    text,
    containers,
    rts-hs,
    pdf-rts,
    pdf-spec,
    pdf-dom-spec

-- This is the compiler: it generates the sources in `pdf-spec`
executable pdf-generator
  default-language:     Haskell2010
  hs-source-dirs: src/generator
  main-is:        Main.hs
  build-depends:  base, containers, daedalus, filepath
  ghc-options:    -Wall


