cabal-version:       3.0
name:                pdf-driver
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
license:             ISC
license-file:        LICENSE
author:              Iavor Diatchki
maintainer:          iavor.diatchki@gmail.com
copyright:           2019, Galois Inc
-- category:
build-type:          Simple
extra-source-files:
  CHANGELOG.md,
  spec/PdfDemo.ddl,
  spec/ISOCodes.ddl,
  spec/PdfText.ddl,
  spec/PdfValidate.ddl,
  spec/PdfDOM.ddl


-- Compiled versions of the DDL specs.
library pdf-spec
  default-language:     Haskell2010
  hs-source-dirs:       src/spec
  ghc-options:          -Wall

  exposed-modules:
    PdfDemo,
    PdfValidate,
    PdfDOM
    -- PdfText,
    -- ISOCodes,

  build-depends:
    base >=4.13 && <4.14,
    containers,
    bytestring,
    rts-hs,
    pdf-cos


executable pdf-hs-driver
  default-language:    Haskell2010
  hs-source-dirs:      src/driver
  ghc-options:         -Wall

  main-is: Main.hs
  other-modules:
    CommandLine,
    Common

  build-depends:
    base,
    text >= 1.2.4,
    split,
    optparse-applicative,
    filepath,
    bytestring,
    containers,
    pretty,
    pretty-show,
    mtl,
    rts-hs,
    pdf-cos,
    pdf-spec

executable pdf-dom
  default-language: Haskell2010
  hs-source-dirs:   src/dom
  main-is:          Main.hs
  other-modules:
    CommandLine,
    PP
  build-depends:
    base,
    bytestring,
    base64-bytestring,
    text,
    containers,
    pretty,
    rts-hs,
    pdf-cos,
    pdf-spec,
    simple-get-opt

-- This is the compiler: it generates the sources in `pdf-spec`
executable pdf-generator
  default-language:     Haskell2010
  hs-source-dirs: generator
  main-is:        Main.hs
  build-depends:  base, containers, daedalus, filepath
  ghc-options:    -Wall


