cabal-version:       3.0
name:                pdf-driver
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
license:             ISC
license-file:        LICENSE
author:              Iavor Diatchki
maintainer:          iavor.diatchki@gmail.com
copyright:           2019, Galois Inc
-- category:
build-type:          Custom
extra-source-files:
  CHANGELOG.md,
  spec/PdfDemo.ddl,
  spec/PdfValidate.ddl,
  spec/PdfDOM.ddl

-- This is the compiler: it generates the sources in `pdf-spec`
custom-setup
  setup-depends:  base, containers, daedalus, directory, text, unix, filepath, Cabal


-- Compiled versions of the DDL specs.
library
  default-language:     Haskell2010
  hs-source-dirs:       src/spec
  ghc-options:          -Wall

  exposed-modules:
    PdfDemo,
    PdfValidate,
    PdfDOM

  autogen-modules:
    PdfDemo,
    PdfValidate,
    PdfDOM,

  build-depends:
    base >=4.13 && <4.15,
    containers,
    bytestring,
    rts-hs,
    pdf-cos


executable pdf-hs-driver
  default-language:    Haskell2010
  hs-source-dirs:      src/driver
  ghc-options:         -Wall

  main-is: Main.hs
  other-modules:
    CommandLine,
    Common

  build-depends:
    base,
    text >= 1.2.4,
    split,
    optparse-applicative,
    filepath,
    bytestring,
    containers,
    pretty,
    pretty-show,
    mtl,
    rts-hs,
    pdf-cos,
    pdf-driver

executable pdf-dom
  default-language: Haskell2010
  hs-source-dirs:   src/dom
  main-is:          Main.hs
  other-modules:
    CommandLine
  build-depends:
    base,
    bytestring,
    base64-bytestring,
    text,
    containers,
    pretty,
    rts-hs,
    pdf-cos,
    pdf-driver,
    simple-get-opt

executable run-testset
  default-language: Haskell2010
  hs-source-dirs:   test/src/run-testset
  ghc-options:      -threaded -rtsopts "-with-rtsopts=-I0 -qg"
  main-is:          RunTestSet.hs
  other-modules:
    Tools,
    Types,
    Util
  build-depends:
    base,
    containers,
    regex-tdfa,
    shake

    
