cabal-version:       >=1.10

name:                rts-hs
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
license:             ISC
license-file:        LICENSE
author:              Iavor Diatchki
maintainer:          iavor.diatchki@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  hs-source-dirs:      src
  exposed-modules:     RTS,
                       RTS.Numeric,
                       RTS.ParserAPI,
                       RTS.Parser,
                       RTS.ParserTraced,
                       RTS.ParserUntraced,
                       RTS.StateT,
                       RTS.Vector,
                       RTS.Map,
                       RTS.Input,
                       RTS.Base,
                       RTS.ParseError,
                       RTS.Iterator,
                       RTS.JSON,
                       RTS.InputTrace,
                       RTS.Annot
  build-depends:       base >=4.13,
                       vector,
                       vector-builder,
                       containers,
                       bytestring,
                       filepath,
                       text,
                       pretty
  ghc-options:         -O2 -Wall
  default-language:    Haskell2010



