cabal-version:       >=1.10

name:                rts-vm-hs
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
license:             ISC
license-file:        LICENSE
author:              Iavor Diatchki
maintainer:          iavor.diatchki@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  hs-source-dirs:      src
  exposed-modules:     Daedalus.RTS,
                       Daedalus.RTS.Convert,
                       Daedalus.RTS.Numeric,
                       Daedalus.RTS.Vector,
                       Daedalus.RTS.Map,
                       Daedalus.RTS.Input,
                       Daedalus.RTS.Iterator,
                       Daedalus.RTS.JSON,
                       Daedalus.RTS.Parser
  build-depends:       base >=4.13,
                       vector,
                       vector-builder,
                       containers,
                       bytestring,
                       text,
                       pretty
  ghc-options:         -O2 -Wall
  default-language:    Haskell2010
  default-extensions:
    BlockArguments,
    OverloadedStrings,
    DataKinds,
    TypeOperators,
    KindSignatures,
    TypeFamilies,
    StandaloneDeriving,
    FlexibleInstances,
    FlexibleContexts,
    MultiParamTypeClasses,
    UndecidableInstances,
    ConstraintKinds,
    ScopedTypeVariables,
    RecordWildCards


