cabal-version:       2.4
name:                $EXE
version:             1.0
license-file:        LICENSE
author:              $AUTHOR
maintainer:          $EMAIL
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable $EXE
  main-is:             Main.hs
  build-depends:       base >=4.13, text, bytestring, rts-hs, rts-hs-data
  default-language:    Haskell2010
  other-modules:       $MODULES
