cabal-version:       3.0
name:                icc-tools
version:             0.1.0.0
synopsis:            This is a library for working with ICC documents
-- description:
-- bug-reports:
license:             ISC
license-file:        LICENSE
author:              Iavor Diatchki
maintainer:          iavor.diatchki@gmail.com
copyright:           2021, Galois Inc
-- category:
build-type:          Custom
extra-source-files:
  spec/Debug.ddl
  spec/Daedalus.ddl
  spec/ICC.ddl
  spec/Parser.ddl
  spec/Validator.ddl

custom-setup
  setup-depends:
    base, containers, daedalus, directory, text, unix, filepath, Cabal

library
  default-language:     Haskell2010
  hs-source-dirs:       src, src/spec
  ghc-options:          -Wall

  exposed-modules:
    ICC
    PP
    Parser
    Validator

  other-modules:
    Debug
    Daedalus

  autogen-modules:
    Daedalus
    Debug
    ICC
    Parser
    Validator

  build-depends:
    base,
    bytestring,
    text,
    containers,
    pretty,
    rts-hs,
    rts-hs-data

executable icc
  default-language:     Haskell2010
  hs-source-dirs:       exe
  main-is:              Main.hs
  build-depends:
    base,
    pretty,
    rts-hs,
    rts-hs-data,
    icc-tools

executable icc-gen
  default-language:     Haskell2010
  hs-source-dirs:       exe
  main-is:              Gen.hs
  other-modules:        Bin
  build-depends:
    base,
    bytestring,
    binary


