cabal-version:      3.0
name:               nitf
version:            0.1.0.0
-- synopsis:
-- description:
license:            ISC
license-file:       LICENSE
author:             Iavor Diatchki
maintainer:         iavor.diatchki@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md

extra-source-files:
  spec/*.ddl

common warnings
    ghc-options: -Wall

executable nitf
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.14.3.0,
                      bytestring,
                      daedalus,
                      rts-vm-hs
    hs-source-dirs:   app
    default-language: Haskell2010
