cabal-version:      2.4
name:               arlington-pdf-model
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Iavor Diatchki
maintainer:         iavor.diatchki@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
  CHANGELOG.md
  app/ArlingtonPDF.ddl

executable arlington-pdf-model
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
      Parser

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0,
                      bytestring,
                      text,
                      vector,
                      directory,
                      containers,
                      filepath,
                      pretty,
                      daedalus,
                      rts-vm-hs
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options: -Wall
