cabal-version:      2.4
name:               arlington-pdf-model
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Iavor Diatchki
maintainer:         iavor.diatchki@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
  CHANGELOG.md
  app/ArlingtonPDF.md

executable arlington-pdf-model
    main-is:          Main.hs

    other-modules:
      Parser
      PP
      LinkUses
      Graph

    default-extensions:
      BlockArguments
      OverloadedStrings
      DataKinds
      TypeApplications

    build-depends:    base,
                      bytestring,
                      text,
                      vector,
                      directory,
                      containers,
                      filepath,
                      pretty,
                      GraphSCC,
                      daedalus,
                      rts-vm-hs
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options: -Wall
