cabal-version:      3.0
name:               sexp-happy
version:            0.1.0.0
-- synopsis:
-- description:
license:            ISC
license-file:       LICENSE
author:             Iavor S. Diatchki
maintainer:         iavor.diatchki@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable sexp-happy
    import:           warnings
    main-is:          Main.hs
    other-modules:    Lexer, Grammar
    build-depends:    base, bytestring, array
    build-tool-depends: alex:alex, happy:happy
    hs-source-dirs:   app
    default-language: Haskell2010
